--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Kurjerio skaiciuokle v1</title>
 </head>
 <body>
+
+    <div class="menu">
+        <div>Daily report</div>
+    </div>
+    
     <div class="calculatorBox">
 
         <form>
