--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     
     <div class="calculatorBox">
 
-        <form>
+        <form id="forma">
+
+            <div class="formRow">
+                <label for="date">Data:</label><br>
+                <input class="input-short" type="date" id="date" name="date"><br>
+            </div>    
+
             <div class="formRow">
                 <label for="Dienos pajamos">Dienos pajamos:</label><br>
                 <input class="input-short" type="number" id="Dienos pajamos" name="Dienos pajamos"><br>
@@ -63,7 +69,7 @@
 
             </div>
 
-            <input type="submit">
+            <input type="submit" value="submit">
         </form>
 
     </div>
