--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <textarea class="input-long resizeable" id="komentaras" name="komentaras" style="height: 50px;"></textarea>
 
             </div>
-            <input type="submit" value="submit">
+            <input type="submit" value="išsiųsti">
         </form>
 
     </div>
