--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </form>
 
         <div class="searchBox">
-            <input id="searchInput" type="text" class="searchBoxInput" placeholder="search by date ...">
+            <input id="searchInput" type="text" class="searchBoxInput" placeholder="search the database by date ...">
         </div> 
     
 
