added more menu buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <div class="menu">
-        <div class="menuButton">Daily report</div>
+        <div id="dailyReport">Daily report</div>
+        <div id="Performance">Performance</div>
+        <div id="Statistics">Statistics</div>
     </div>
     
     <div class="calculatorBox">
@@ -48,7 +50,7 @@
 
             <div class="formRow">
                 
-                <label for="dienos tempas">Dienos tempas</label><br>
+                <label for="dienos tempas">Dienos tempas:</label><br>
                 <input class="input-long" type="text" id="listInput" list="tempoList" >
 
                 <datalist id="tempoList">
