--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div id="dailyReport">Daily report</div>
         <div id="Performance">Performance</div>
         <div id="Statistics">Statistics</div>
+        <div id="TargetTracker">Target Tracker</div>
     </div>
     
     <div class="calculatorBox">
