update to code quality

--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
 
             <div class="Form-row">
                 <label for="Dienos pajamos">Dienos pajamos:</label><br>
-                <input class="Input-short" type="number" id="Dienos pajamos" name="Dienos pajamos"><br>
+                <input class="Input-short" type="number" id="daily-income" name="Dienos pajamos"><br>
             </div>
 
             <div class="Form-row">
                 <label for="Kuro islaidos">Kuro išlaidos:</label><br>
-                <input class="Input-short" type="number" id="Kuro islaidos" name="Kuro islaidos">
+                <input class="Input-short" type="number" id="daily-expenses" name="Kuro islaidos">
             </div>
 
             <div class="Form-row">
                 <label for="Nuvaziuotas atstumas">Nuvažiuotas atstumas:</label><br>
-                <input class="Input-short" type="number" id="Nuvaziuotas atstumas" name="Nuvaziuotas atstumas">
+                <input class="Input-short" type="number" id="distance-driven" name="Nuvaziuotas atstumas">
             </div>
 
             <div class="Form-row">
                 <label for="pristatyti uzsakymai">Pristatyti užsakymai:</label><br>
-                <input class="Input-short" type="number" id="pristatyti uzsakymai" name="pristatyti uzsakymai">
+                <input class="Input-short" type="number" id="orders-completed" name="pristatyti uzsakymai">
             </div>
 
             <div class="Form-row">
                 <label for="isdribtas laikas">Išdirbtas laikas:</label><br>
-                <input class="Input-short" type="number" id="isdribtas laikas" name="isdribtas laikas">
+                <input class="Input-short" type="number" id="hours-worked" name="isdribtas laikas">
             </div>
 
             <div class="Form-row">
@@ -55,7 +55,7 @@
                 <label for="dienos tempas">Dienos tempas:</label><br>
                 <input class="Input-long" type="text" id="list-input" list="tempoList" >
 
-                <datalist id="tempoList">
+                <datalist id="tempo-list">
                     <option value="Extreeme slow">
                     <option value="Slow">
                     <option value="Normal">
