--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <textarea class="input_long resizeable" id="comment_input" name="comment" style="height: 50px;"></textarea>
 
             </div>
-            <input type="submit" value="išsiųsti">
+            <input type="submit" value="Išsiųsti" class="form_submit_button" id="daily_report_form_submit" >
         </form>
 
     </div>
